--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         alt="Foto de perfil">
 
       <h1>Natan Alves Pena</h1>
-      <p>Recife – Pe</p>
+      <p>Recife – PE</p>
       <p>📞 (81) 99865-3550 | ✉ natscoisaseria@gmail.com<p/>
 
       <p>
